index.css
@import 'all.css';

body		{ font-family: monospace; 
		  font-size: 9pt;
		  margin-top: 0em;
		  margin-left: 2em;
		  color: #dddddd;
		  min-width: 580px; }

.nvis		{ color: #dddddd; }

.offs		{ margin-left: 0em; }

q		{ color: #000000; }

span		{ color: #000000; 
		  margin-left: 2em; }

div		{ margin-left: 4em;
		  color: #000000; 
		  max-width: 60em; }

span.h1		{ font-weight: bolder; 
		  margin-left: 0em; }

span.h2		{ font-weight: bolder; 
		  margin-left: 1em; }

a		{ margin-left: 2em; }

span.em		{ font-style: italic; }

col.left	{ width: 24em; }

table		{ width: 100%;
		  border-spacing: 0em; }

td		{ padding: 0em;
		  margin: 0em; }

